# ipt

./: .env.example  .gitignore  README.md  main.ipynb  pyproject.toml
data/processed/: shein_absa_full.json  shein_absa_small.json
data/reviews/: shein_full.json  shein_small.json
scripts/: run_shein_absa.py
src/config/: scraping_config.json  scraping_config_small.json
src/processing/: openaigpt.py  pyabsa_multilingual.py  shein_absa_pipeline.py
src/scraping/: __init__.py  scraper.py
src/utils/: helpers.py  shein_reviews.py
